<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/loan"
        android:icon="@drawable/ic_baseline_credit_card_24"
        android:orderInCategory="100"
        android:title="@string/loans"
        app:showAsAction="never" />
    <item
        android:id="@+id/savings"
        android:icon="@drawable/ic_baseline_attach_money_24"
        android:orderInCategory="100"
        android:title="@string/savings"
        app:showAsAction="never" />
    <item
        android:id="@+id/mandatory"
        android:icon="@drawable/ic_baseline_attach_money_24"
        android:orderInCategory="100"
        android:title="@string/mandatory_savings"
        app:showAsAction="never" />

    <item
        android:id="@+id/cash_accounts"
        android:icon="@drawable/ic_baseline_attach_money_24"
        android:orderInCategory="100"
        android:title="@string/cash_collections"
        app:showAsAction="never" />

</menu>
