<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/newentry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/newentry"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/black"
        android:layout_margin="5dp"
        android:padding="5dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary"></LinearLayout>

    <TextView
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/black"
        android:padding="5dp"
        android:layout_margin="5dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary"></LinearLayout>

    <TextView
        android:id="@+id/deduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deduct"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/black"
        android:padding="5dp"
        android:layout_margin="5dp"/>



</LinearLayout>