<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:id="@+id/logo_image"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/text_color"
            android:text="@string/app_name"
            android:textStyle="italic|bold"
            android:layout_marginTop="@dimen/padding_too_large"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/padding_medium"
            android:padding="@dimen/padding_medium"
            android:text="@string/change_pass"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorPrimary"
            android:textStyle="normal|bold" />

        <EditText
            android:id="@+id/id_number"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="5dp"
            android:gravity="center"
            android:hint="@string/idno"
            android:textAlignment="center"

            android:layout_marginStart="@dimen/padding_large"
            android:layout_marginEnd="@dimen/padding_large"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@android:color/black"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="5dp"
            android:layout_marginStart="@dimen/padding_large"
            android:layout_marginEnd="@dimen/padding_large"
            android:inputType="textPassword"
            android:gravity="center"
            android:hint="@string/newpassword"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@android:color/black"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/password2"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="5dp"
            android:layout_marginStart="@dimen/padding_large"
            android:layout_marginEnd="@dimen/padding_large"
            android:inputType="textPassword"
            android:gravity="center"
            android:hint="@string/retype_password"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@android:color/black"
            android:textStyle="normal" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            >



            <TextView
                android:id="@+id/signup_btn"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/padding_medium"
                android:layout_margin="@dimen/padding_medium"
                android:text="@string/newuser"
                android:textStyle="bold"
                android:visibility="gone"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/text_color" />

            <TextView
                android:id="@+id/change_pass_btn"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/padding_medium"
                android:layout_margin="@dimen/padding_medium"
                android:text="@string/change_pass"
                android:textStyle="bold"
                android:visibility="gone"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/text_color" />





        </LinearLayout>

        <LinearLayout
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/padding_medium"
            android:layout_margin="@dimen/padding_large"
            android:background="@drawable/rounded_blue"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/finish"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/white" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>
